# aram_predictor

./: .gitignore  README.md  pyproject.toml
aram_predictor/: get_matches.py  match_crawler.py  settings.py
tests/: test_aram_predictor.py
