[tool.poetry]
name = "aram_predictor"
version = "0.1.0"
description = ""
authors = ["Eric Mark Martin <ericmarkmartin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
keras = "^2.3.1"
cassiopeia = "^4.0.8"
python-dotenv = "^0.10.3"
pylint = "^2.4.4"
black = "^19.10b0"
numpy = "^1.18.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
